fixed not being able to see aupurchases, code clean up and bug fixes

--- a/ng-acr/app/partials/checkout.html
+++ b/ng-acr/app/partials/checkout.html
@@ -101,6 +101,6 @@
     </div>
   </div>
   <div class='col-md-12'>
-    <div class='btn btn-primary' ng-click='view.checkout()' ng-disabled='!view.payWith'>Checkout with chosen Payment method</div>
+    <div class='btn btn-primary' ng-click='view.checkout()' ng-disabled='!view.payWith || view.loading'>Checkout with chosen Payment method</div>
   </div>
 </div>
