--- a/ng-acr/app/partials/account.html
+++ b/ng-acr/app/partials/account.html
@@ -2,6 +2,7 @@
 <h2 class='col-md-12'>Account</h2>
 <div class='col-md-12' ng-include="'app/partials/userForm.html'"></div>
 <input class='btn btn-info' ng-click='view.verifyPhone()' ng-if='userInfo.roles.owner' tabindex='1' type='button' value='Verify Phone'>
+<input class='btn btn-info' ng-click='view.verifyUser()' ng-if='userInfo.roles.buyer' tabindex='1' type='button' value='Verify User'>
 <h2 class='col-md-12'>ACH</h2>
 <div class='col-md-6'>
   <h3>ACH account Info</h3>
