--- a/ng-acr/app/partials/haml/account.haml
+++ b/ng-acr/app/partials/haml/account.haml
@@ -2,6 +2,7 @@
 %h2.col-md-12 Account
 %div.col-md-12(ng-include="'app/partials/userForm.html'")
 %input.btn.btn-info(ng-click="view.verifyPhone()" type="button" tabindex="1" value="Verify Phone" ng-if='userInfo.roles.owner')
+%input.btn.btn-info(ng-click="view.verifyUser()" type="button" tabindex="1" value="Verify User" ng-if='userInfo.roles.buyer')
 %h2.col-md-12 ACH
 .col-md-6
   %h3 ACH account Info
